fix AdvertisementServiceImpl